Added endpoint for list of static regions id
